--- a/Scenario Based Samples/AnonymousUser/web-client/src/index.html
+++ b/Scenario Based Samples/AnonymousUser/web-client/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://onpremise-demo.boldbi.com/bi/cdn/scripts/designer/jquery-1.10.2.min.js"></script>
+  <!-- <script src="https://onpremise-demo.boldbi.com/bi/cdn/scripts/designer/jquery-1.10.2.min.js"></script>
   <script src="https://onpremise-demo.boldbi.com/bi/cdn/scripts/jquery-ui.min.js"></script>
   <script src="https://onpremise-demo.boldbi.com/bi/cdn/scripts/designer/jsrender.min.js"></script>
   <script type="text/javascript" src="https://onpremise-demo.boldbi.com/bi/cdn/scripts/designer/ej1.web.all.min.js"></script>
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://onpremise-demo.boldbi.com/bi/webdesignerservice/themes/ej2.partone.web.all.min.css">
   <link rel="stylesheet" href="https://onpremise-demo.boldbi.com/bi/webdesignerservice/themes/ej2.parttwo.web.all.min.css">
   <link rel="stylesheet" href="https://onpremise-demo.boldbi.com/bi/webdesignerservice/themes/ej.designerwidgets.all.min.css">
-  <link rel="stylesheet" href="https://onpremise-demo.boldbi.com/bi/webdesignerservice/themes/ej.dashboarddesigner.min.css">
+  <link rel="stylesheet" href="https://onpremise-demo.boldbi.com/bi/webdesignerservice/themes/ej.dashboarddesigner.min.css"> -->
 </head>
 <body>
   <app-root>
