--- a/Scenario Based Samples/AnonymousUser-Final/web-client/src/index.html
+++ b/Scenario Based Samples/AnonymousUser-Final/web-client/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+
   <!-- <script src="https://onpremise-demo.boldbi.com/bi/cdn/scripts/designer/jquery-1.10.2.min.js"></script>
   <script src="https://onpremise-demo.boldbi.com/bi/cdn/scripts/jquery-ui.min.js"></script>
   <script src="https://onpremise-demo.boldbi.com/bi/cdn/scripts/designer/jsrender.min.js"></script>
