handled some UIs for responsive case

--- a/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/index.html
+++ b/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://onpremise-demo.boldbi.com/bi/webdesignerservice/themes/ej.designerwidgets.all.min.css">
   <link rel="stylesheet" href="https://onpremise-demo.boldbi.com/bi/webdesignerservice/themes/ej.dashboarddesigner.min.css"> -->
 </head>
-<body>
+<body style="overflow-x: hidden;">
   <app-root>
   </app-root>
 </body>
